add refresh_token's api with tests and docs
