# documents/swagger.yaml
@@ -13,6 +13,44 @@ tags:
 schemes:
 - "http"
 paths:
+  /students/refresh_token:
+    post:
+      tags:
+      - "students"
+      summary: "to get a new token for the student"
+      description: "This api is used to get a new token"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "refresh_token that will be used to issue a new token"
+        required: true
+        schema:
+          $ref: "#/definitions/refresh_token_body"
+      - name: "authorization"
+        in: "header"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: 200 (Success)
+          schema:
+            $ref: '#/definitions/refresh_token_response'
+        '400':
+          description: 400 (Bad Request - input is incorrect or missing)
+          schema:
+            $ref: '#/definitions/error_400'
+        '401':
+          description: 401 (Not Authenticated - either the token is invalid, or refresh_token is incorrect)
+          schema:
+            $ref: '#/definitions/error_401'
+        '404':
+          description: 404 (Account is not found)
+          schema:
+            $ref: '#/definitions/error_404'
   /students/signup:
     post:
       tags:
@@ -74,6 +112,20 @@ paths:
           schema:
             $ref: '#/definitions/error_401'
 definitions:
+  refresh_token_body:
+    type: "object"
+    properties:
+      refresh_token:
+        type: "string"
+    example:
+      refresh_token: "7a92299daf865ace374e999c2fe02234"
+  refresh_token_response:
+    type: "object"
+    properties:
+      token:
+        type: "string"
+    example:
+      authorization: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdHVkZW50X2lkIjoxLCJzdHVkZW50X25hbWUiOiJGYXd6aSIsInBob25lX251bWJlciI6IjAxMDkwMjQzNzk1Iiwicm9sZSI6InN0dWRlbnQiLCJpYXQiOjE2MDMwNTgwODksImV4cCI6MTYwMzE0NDQ4OX0.rzuImCu26vMTEu82DKlHdqGYyWwHnj2O4_J6oSz6kS0"
   signin_student_body:
     type: "object"
     properties:
@@ -81,6 +133,9 @@ definitions:
         type: "string"
       password:
         type: "string"
+    example:
+      phone_number: "01090243795"
+      password: "12qwaszx"
   signin_student_response:
     type: "object"
     properties:
