# services/students/students.route.js
@@ -10,7 +10,7 @@ const isAuth = require("../../middlewares/is-auth");
 // Routes: 
 router.post("/signup",validateSchema(studentsSchema.signup,'body'),studentsController.signup);
 router.post("/signin",validateSchema(studentsSchema.signin,'body'),studentsController.signin);
-router.post("/refresh_token",isAuth(),granted("updateOwn","token"),studentsController.refresh_token);
+router.post("/refresh_token",isAuth(),granted("updateOwn","token"),validateSchema(studentsSchema.refresh_token,'body'),studentsController.refresh_token);
 
 
 module.exports = router;
